# ZX4D30CE40S

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  README_CN.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/apps/: CMakeLists.txt  apps.h
components/apps/camera/: Camera.cpp  app_video.c
components/apps/camera/ui/screens/: ui_ScreenCameraPhoto.c  ui_ScreenCameraShot.c
components/apps/game_2048/: CMakeLists.txt  img_logo_2048.c  lv_100ask_2048.c  lv_100ask_2048.h  phone_app_game_2048.cpp  phone_app_game_2048.hpp  phone_app_game_2048_main.c  phone_app_game_2048_main.h  ui.c  ui.h
components/apps/panellan/: CMakeLists.txt  img_logo.c  img_panellan.c  phone_app_panellan.cpp  phone_app_panellan.hpp  phone_app_panellan_main.c  phone_app_panellan_main.h  ui.c  ui.h
components/camera_video/: CMakeLists.txt  camera_video.c  camera_video.h  idf_component.yml
components/custom_board/: CMakeLists.txt  qmsd_board_pin.h  zx4d30ce40s_lcd_rgb.c  zx4d30ce40s_lcd_rgb.h
components/esp_lcd_touch_cst3240/: CMakeLists.txt  README.md  esp_lcd_touch_cst3240.c  idf_component.yml
components/esp_lcd_touch_cst3240/include/: esp_lcd_touch_cst3240.h
components/eth_ethernet/: CMakeLists.txt  eth_ethernet.c  eth_ethernet.h
components/sd_card_sdmmc/: CMakeLists.txt  sd_card_sdmmc.c  sd_card_sdmmc.h
components/tusb/: CMakeLists.txt  idf_component.yml  tusb_composite.c  tusb_composite.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/brookesia/: CMakeLists.txt  brookesia.cpp  brookesia.h
(+2 files in other folders)
